@@ -128,10 +128,11 @@
 2020-11-25 catering.py added notification by refusing access to operate employee (access level 0)
 2020-11-26 catering.py by no access employee show red sign
 2020-11-29 catering.py buttons replaced to avoid incorrect selections
-2021-01-03 catering.py changed copyright message
+2021-01-03 caterijng.py changed copyright message
 2021-02-04 catering.py calculationStock with determination annual consumption by zero division repaired
 2021-02-17 catering.py changeArticle wrong index changed by category showing and updating
 2021-02-26 catering.py with changing maingroup (big double arrows up or down buttons) always starting with subgroup 1
+2020-02-26 catering.py changing main buttongroups more coherent by coding without guiding-parameter self.flag
            
 
 
